--- a/src/index.css
+++ b/src/index.css
@@ -2860,8 +2860,6 @@
 }
 
 
-
-
 @media (min-width: 321px) {
   .App {
     position: relative;
@@ -2881,14 +2879,14 @@
   }
 
   .slider {
-    width: 321px;
+    max-width: 320px;
     height: 500px;
     border-radius: 10px;
     overflow: hidden;
   }
 
   .slides img {
-    width: 321px;
+    max-width: 320px;
   }
 
   .Second-Background {
@@ -3143,7 +3141,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60vh;
+    height: 65vh;
   }
 
   .Fourth {
@@ -3203,7 +3201,7 @@
   }
 
   .Sixth-Background {
-    height: 50vh;
+    height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -3214,23 +3212,23 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 30rem;
+    height: 20rem;
   }
 
   .Sixth .p-presents {
     position: relative;
-    bottom: 1.1rem;
+    bottom: 2.3rem;
     left: 0rem;
     font-family: "Great Vibes", cursive;
     font-size: 41px;
     width: 16rem;
   }
 
-  .best {
+  .best p{
     font-size: 17px;
     position: relative;
-    bottom: 0rem;
-    width: 20rem;
+    bottom: 0.5rem;
+    width: 15rem;
   }
 
   .presents-table {
@@ -3243,7 +3241,7 @@
     width: 8.8rem;
     height: 5rem;
     position: relative;
-    bottom: 0.7rem;
+    bottom: -0.5rem;
   }
 
   .liverpool {
@@ -3266,7 +3264,7 @@
   }
 
   .Fifth-Background {
-    height: 90vh;
+    height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -3278,7 +3276,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 30rem;
+    height: 10rem;
     width: 20rem;
   }
 
@@ -3291,7 +3289,7 @@
     position: relative;
     left: 0rem;
     width: 18rem;
-    bottom: 3.3rem;
+    bottom:  2.1rem;
   }
 
   .funny .attendance {
@@ -3328,7 +3326,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    top: 0.3rem;
+    top: 1.3rem;
   }
 
   .Form form {
@@ -3439,7 +3437,7 @@
   .funny1 p {
     font-size: 17.5px;
     position: relative;
-    bottom: -0.7rem;
+    bottom: -2rem;
     width: 17rem;
   }
 
@@ -3448,10 +3446,20 @@
     top: 3rem;
     width: 16rem;
   }
+
+   .Flow {
+    position: relative;
+    top: 3rem;
+  }
+
+  .Flow img {
+    width: 17rem;
+  }
 }
 
-@media (min-width: 321px) and (min-height: 580px) {
+@media (min-width: 321px) and (min-height: 580px){
   .App {
+    height: 520vh;
     position: relative;
     bottom: 0rem;
     display: flex;
@@ -3469,14 +3477,14 @@
   }
 
   .slider {
-    width: 321px;
+    min-width: 321px;
     height: 580px;
     border-radius: 10px;
     overflow: hidden;
   }
 
   .slides img {
-    width: 321px;
+    min-width: 321px;
     height: 580px;
   }
 
@@ -3732,7 +3740,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60vh;
+    height: 65vh;
   }
 
   .Fourth {
@@ -3792,7 +3800,7 @@
   }
 
   .Sixth-Background {
-    height: 50vh;
+    height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -3803,23 +3811,23 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 30rem;
+    height: 20rem;
   }
 
   .Sixth .p-presents {
     position: relative;
-    bottom: 1.1rem;
+    bottom: 2.3rem;
     left: 0rem;
     font-family: "Great Vibes", cursive;
     font-size: 41px;
     width: 16rem;
   }
 
-  .best {
+  .best p{
     font-size: 17px;
     position: relative;
-    bottom: 0rem;
-    width: 20rem;
+    bottom: 0.5rem;
+    width: 15rem;
   }
 
   .presents-table {
@@ -3832,7 +3840,7 @@
     width: 8.8rem;
     height: 5rem;
     position: relative;
-    bottom: 0.7rem;
+    bottom: -0.5rem;
   }
 
   .liverpool {
@@ -3855,7 +3863,7 @@
   }
 
   .Fifth-Background {
-    height: 90vh;
+    height: 75vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -3867,7 +3875,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 30rem;
+    height: 10rem;
     width: 20rem;
   }
 
@@ -3880,7 +3888,7 @@
     position: relative;
     left: 0rem;
     width: 18rem;
-    bottom: 3.3rem;
+    bottom:  2.1rem;
   }
 
   .funny .attendance {
@@ -3917,7 +3925,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    top: 0.3rem;
+    top: 1.3rem;
   }
 
   .Form form {
@@ -4028,7 +4036,7 @@
   .funny1 p {
     font-size: 17.5px;
     position: relative;
-    bottom: -0.7rem;
+    bottom: -2rem;
     width: 17rem;
   }
 
@@ -4039,8 +4047,9 @@
   }
 }
 
-@media (min-width: 321px) and (min-height: 640px) {
+@media (min-width: 321px) and (min-height: 640px){
   .App {
+    height: 490vh;
     position: relative;
     bottom: 0rem;
     display: flex;
@@ -4058,14 +4067,14 @@
   }
 
   .slider {
-    width: 321px;
+    min-width: 321px;
     height: 640px;
     border-radius: 10px;
     overflow: hidden;
   }
 
   .slides img {
-    width: 321px;
+    min-width: 321px;
     height: 640px;
   }
 
@@ -4321,7 +4330,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60vh;
+    height: 65vh;
   }
 
   .Fourth {
@@ -4381,7 +4390,7 @@
   }
 
   .Sixth-Background {
-    height: 50vh;
+    height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -4392,23 +4401,23 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 30rem;
+    height: 20rem;
   }
 
   .Sixth .p-presents {
     position: relative;
-    bottom: 1.1rem;
+    bottom: 2.3rem;
     left: 0rem;
     font-family: "Great Vibes", cursive;
     font-size: 41px;
     width: 16rem;
   }
 
-  .best {
+  .best p{
     font-size: 17px;
     position: relative;
-    bottom: 0rem;
-    width: 20rem;
+    bottom: 0.5rem;
+    width: 15rem;
   }
 
   .presents-table {
@@ -4421,7 +4430,7 @@
     width: 8.8rem;
     height: 5rem;
     position: relative;
-    bottom: 0.7rem;
+    bottom: -0.5rem;
   }
 
   .liverpool {
@@ -4444,7 +4453,7 @@
   }
 
   .Fifth-Background {
-    height: 90vh;
+    height: 75vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -4456,7 +4465,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 30rem;
+    height: 10rem;
     width: 20rem;
   }
 
@@ -4469,7 +4478,7 @@
     position: relative;
     left: 0rem;
     width: 18rem;
-    bottom: 3.3rem;
+    bottom:  2.1rem;
   }
 
   .funny .attendance {
@@ -4506,7 +4515,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    top: 0.3rem;
+    top: 1.3rem;
   }
 
   .Form form {
@@ -4617,7 +4626,7 @@
   .funny1 p {
     font-size: 17.5px;
     position: relative;
-    bottom: -0.7rem;
+    bottom: -2rem;
     width: 17rem;
   }
 
@@ -4628,8 +4637,9 @@
   }
 }
 
-@media (min-width: 321px) and (min-height: 700px) {
+@media (min-width: 321px) and (min-height: 700px){
   .App {
+    height: 460vh;
     position: relative;
     bottom: 0rem;
     display: flex;
@@ -4647,14 +4657,14 @@
   }
 
   .slider {
-    width: 321px;
+    max-width: 320px;
     height: 700px;
     border-radius: 10px;
     overflow: hidden;
   }
 
   .slides img {
-    width: 321px;
+    max-width: 320px;
     height: 700px;
   }
 
@@ -4910,7 +4920,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60vh;
+    height: 65vh;
   }
 
   .Fourth {
@@ -4970,7 +4980,7 @@
   }
 
   .Sixth-Background {
-    height: 50vh;
+    height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -4981,23 +4991,23 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 30rem;
+    height: 20rem;
   }
 
   .Sixth .p-presents {
     position: relative;
-    bottom: 1.1rem;
+    bottom: 2.3rem;
     left: 0rem;
     font-family: "Great Vibes", cursive;
     font-size: 41px;
     width: 16rem;
   }
 
-  .best {
+  .best p{
     font-size: 17px;
     position: relative;
-    bottom: 0rem;
-    width: 20rem;
+    bottom: 0.5rem;
+    width: 15rem;
   }
 
   .presents-table {
@@ -5010,7 +5020,7 @@
     width: 8.8rem;
     height: 5rem;
     position: relative;
-    bottom: 0.7rem;
+    bottom: -0.5rem;
   }
 
   .liverpool {
@@ -5033,7 +5043,7 @@
   }
 
   .Fifth-Background {
-    height: 90vh;
+    height: 75vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -5045,7 +5055,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 30rem;
+    height: 10rem;
     width: 20rem;
   }
 
@@ -5058,7 +5068,7 @@
     position: relative;
     left: 0rem;
     width: 18rem;
-    bottom: 3.3rem;
+    bottom:  2.1rem;
   }
 
   .funny .attendance {
@@ -5095,7 +5105,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    top: 0.3rem;
+    top: 1.3rem;
   }
 
   .Form form {
@@ -5206,634 +5216,16 @@
   .funny1 p {
     font-size: 17.5px;
     position: relative;
-    bottom: -0.7rem;
+    bottom: -2rem;
     width: 17rem;
   }
 
-  .funny1 img {
-    position: relative;
-    top: 3rem;
-    width: 16rem;
-  }
+ 
+
+ 
 }
 
-@media (min-width: 390px) {
-  .App {
-    position: relative;
-    bottom: 0rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
 
-  .First-Background {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-
-  .slider {
-    width: 390px;
-    height: 530px;
-    border-radius: 10px;
-    overflow: hidden;
-  }
-
-  .slides img {
-    width: 390px;
-    height: 530px;
-  }
-
-  .Second-Background {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    top: 0rem;
-    height: 80vh;
-    width: 390px;
-  }
-
-  .Second {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 30rem;
-  }
-
-  .title {
-    position: relative;
-    top: 21rem;
-    font-size: 39px;
-    color: #fff;
-    left: 0rem;
-    width: 19rem;
-    z-index: 100;
-  }
-
-  .My-wedding {
-    font-size: 56px;
-    position: relative;
-    left: 0.7rem;
-    bottom: 0.5rem;
-  }
-
-  .Date {
-    width: 20rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    top: 0rem;
-  }
-
-  .Date p {
-    font-size: 25px;
-    position: relative;
-    right: 2rem;
-  }
-
-  .Date h1 {
-    font-size: 27px;
-    position: relative;
-    left: 0.2rem;
-  }
-
-  .Guadalajara {
-    position: relative;
-    bottom: 0.2rem;
-  }
-
-  .Counter {
-    width: 21.5rem;
-    position: relative;
-    right: 0.8rem;
-    top: 1.8rem;
-  }
-
-  .days1 {
-    width: 4rem;
-  }
-
-  .days {
-    font-size: 22px;
-    width: 3.5rem;
-    height: 3.5rem;
-  }
-
-  .days1 small {
-    font-size: 17px;
-  }
-
-  .hours1 {
-    width: 4rem;
-  }
-
-  .hours {
-    font-size: 22px;
-    width: 3.5rem;
-    height: 3.5rem;
-  }
-
-  .hours1 small {
-    font-size: 17px;
-  }
-
-  .minutes1 {
-    width: 4rem;
-  }
-
-  .minutes {
-    font-size: 22px;
-    width: 3.5rem;
-    height: 3.5rem;
-  }
-
-  .minutes1 small {
-    font-size: 17px;
-  }
-
-  .seconds1 {
-    width: 4rem;
-  }
-
-  .seconds {
-    font-size: 22px;
-    width: 3.5rem;
-    height: 3.5rem;
-  }
-
-  .seconds1 small {
-    font-size: 17px;
-  }
-
-  .Flowers {
-    width: 16rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .Third-Background {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    top: 0rem;
-    height: 80vh;
-    width: 390px;
-  }
-
-  .Third {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 30rem;
-  }
-
-  .Schedule {
-    font-size: 57px;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    bottom: 1rem;
-  }
-
-  .Schedule1 {
-    position: relative;
-    right: 0rem;
-    width: 20rem;
-    top: 0.5rem;
-  }
-
-  .CereImage {
-    position: relative;
-    right: 1.8rem;
-    width: 14rem;
-  }
-
-  .CereImage img {
-    width: 4.8rem;
-  }
-
-  .CereImage p {
-    font-size: 22px;
-  }
-
-  .p1 {
-    font-size: 10px;
-  }
-
-  .CereImage a {
-    font-size: 21px;
-  }
-
-  .Ceremony {
-    width: 22rem;
-    position: relative;
-    left: -0.5rem;
-    bottom: 1.8rem;
-  }
-
-  .Cheers {
-    width: 20rem;
-    position: relative;
-    left: 0rem;
-    top: 0.8rem;
-  }
-
-  .CereText {
-    width: 25rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    right: 0.2rem;
-  }
-
-  .CereText h1 {
-    font-size: 20px;
-  }
-
-  .CereText h2 {
-    font-size: 16.5px;
-    width: 13rem;
-  }
-
-  .CereText p {
-    font-size: 16px;
-    width: 13.5rem;
-  }
-
-  .CheersText {
-    width: 23rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    left: 0.8rem;
-  }
-
-  .CheersText h1 {
-    font-size: 20px;
-  }
-
-  .CheersText h2 {
-    font-size: 16.5px;
-  }
-
-  .CheersText p {
-    font-size: 16px;
-    width: 13rem;
-  }
-
-  .Flowers2 img {
-    width: 16rem;
-    position: relative;
-    top: 1.8rem;
-  }
-
-  .Fourth-Background {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 60vh;
-    width: 390px;
-  }
-
-  .Fourth {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 23rem;
-  }
-
-  .Dressing {
-    height: 10rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    bottom: 1rem;
-  }
-
-  .Traje p {
-    font-size: 18px;
-  }
-
-  .Dress p {
-    font-size: 18px;
-  }
-
-  .Traje img {
-    width: 6.5rem;
-  }
-
-  .Dress img {
-    width: 6.5rem;
-  }
-
-  .Traje {
-    position: relative;
-    bottom: 0.5rem;
-    right: 0.5rem;
-  }
-
-  .Dress {
-    position: relative;
-    bottom: 0.5rem;
-    left: 0.5rem;
-  }
-
-  .Formal {
-    font-size: 18px;
-    position: relative;
-    left: 0.2rem;
-    bottom: 0.5rem;
-  }
-
-  .DressCode {
-    width: 20.5rem;
-    font-size: 45px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    bottom: 3.2rem;
-  }
-
-  .Reservation {
-    font-size: 18px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    top: 0.5rem;
-  }
-
-  .Sixth-Background {
-    height: 50vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .Sixth {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 17rem;
-    width: 390px;
-  }
-
-  .Sixth .p-presents {
-    position: relative;
-    bottom: 1.2rem;
-    left: 0rem;
-    font-family: "Great Vibes", cursive;
-    font-size: 43px;
-    width: 18rem;
-  }
-
-  .best {
-    font-size: 18px;
-    position: relative;
-    bottom: 0.5rem;
-    width: 20rem;
-  }
-
-  .presents-table {
-    width: 18rem;
-    display: grid;
-    place-content: center;
-  }
-
-  .presents-table img {
-    width: 9.4rem;
-    height: 5.2rem;
-    position: relative;
-    bottom: 0.6rem;
-  }
-
-  .liverpool {
-    position: relative;
-    left: 1.5rem;
-    top: 1.5rem;
-  }
-
-  .amazon {
-    position: relative;
-    top: 1.5rem;
-    right: 1.5rem;
-  }
-
-  .Flowers4 img {
-    width: 16rem;
-    position: relative;
-    left: 6rem;
-    bottom: -1rem;
-  }
-
-  .Fifth-Background {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 390px;
-  }
-
-  .Fifth {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 30rem;
-    width: 390px;
-  }
-
-  .funny img {
-    position: relative;
-    bottom: 1rem;
-  }
-
-  .funny {
-    position: relative;
-    left: 0rem;
-    width: 19rem;
-    bottom: 3.3rem;
-  }
-
-  .funny .attendance {
-    font-size: 45px;
-    font-family: "Great Vibes", cursive;
-    position: relative;
-    bottom: -1.9rem;
-  }
-
-  .funny .phrase {
-    font-size: 18.5px;
-    position: relative;
-    bottom: -2.7rem;
-    width: 20rem;
-  }
-
-  .funny .phrase2 {
-    font-size: 17.5px;
-    position: relative;
-    bottom: 0rem;
-    width: 18rem;
-  }
-
-  .funny img {
-    position: relative;
-    width: 13rem;
-  }
-
-  .Form {
-    width: 22rem;
-    height: 20rem;
-    position: relative;
-    right: 2.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top: 0.3rem;
-  }
-
-  .Form form {
-    width: 17rem;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    right: 2rem;
-  }
-
-  .confirmation input {
-    background-color: red;
-  }
-
-  .options {
-    display: flex;
-  }
-
-  .div label {
-    font-size: 29px;
-  }
-
-  .div {
-    position: relative;
-    left: 1rem;
-    width: 17rem;
-  }
-
-  .input {
-    width: 19rem;
-  }
-
-  .div1 {
-    width: 17rem;
-    position: relative;
-    left: 1rem;
-    top: 1.1rem;
-  }
-
-  .div2 {
-    width: 17rem;
-  }
-
-  .yes {
-    width: 9rem;
-    display: flex;
-  }
-
-  .no {
-    width: 11rem;
-    display: flex;
-  }
-
-  .yes label {
-    font-size: 19px;
-  }
-
-  .no label {
-    font-size: 19px;
-  }
-
-  #Si {
-    position: relative;
-    right: -0.3rem;
-    top: 0rem;
-  }
-
-  #No {
-    position: relative;
-    right: 0.7rem;
-    top: 0rem;
-  }
-
-  .input1 {
-    width: 2rem;
-  }
-
-  .input2 {
-    width: 4rem;
-  }
-
-  .div1 strong {
-    font-size: 29px;
-  }
-
-  .div2 {
-    position: relative;
-    left: 1rem;
-    top: 0.7rem;
-  }
-
-  .div2 label {
-    font-size: 29px;
-  }
-
-  .Form button {
-    position: relative;
-    left: 1rem;
-    width: 5rem;
-    height: 2.5rem;
-    font-size: 15px;
-    top: 0.5rem;
-  }
-
-  .funny1 {
-    position: relative;
-    left: 0rem;
-    width: 18rem;
-    bottom: 0rem;
-  }
-
-  .funny1 p {
-    font-size: 18.5px;
-    position: relative;
-    bottom: -0.7rem;
-    width: 21rem;
-  }
-
-  .funny1 img {
-    position: relative;
-    top: 3rem;
-    width: 16rem;
-  }
-}
 
 @media (min-width: 390px) and (min-height: 580px) {
   .App {
