--- a/src/index.css
+++ b/src/index.css
@@ -953,7 +953,7 @@
 
   .Form {
     width: 18rem;
-    height: 18rem;
+    height: 19rem;
     position: relative;
     right: 2.5rem;
     display: flex;
@@ -1065,12 +1065,13 @@
     left: 0rem;
     width: 20rem;
     bottom: 0rem;
+
+    top: 2rem;
   }
 
   .funny1 p {
     font-size: 17.5px;
     position: relative;
-    bottom: -2rem;
     width: 18rem;
   }
 
@@ -1669,7 +1670,6 @@
   .funny1 p {
     font-size: 17.5px;
     position: relative;
-    bottom: -2rem;
     width: 17rem;
   }
 
@@ -2260,7 +2260,6 @@
   .funny1 p {
     font-size: 17.5px;
     position: relative;
-    bottom: -2rem;
     width: 17rem;
   }
 
@@ -3434,13 +3433,13 @@
     position: relative;
     left: 0rem;
     width: 18rem;
-    bottom: 0rem;
+    bottom: -2rem;
   }
 
   .funny1 p {
     font-size: 17.5px;
     position: relative;
-    bottom: -2rem;
+    bottom: 0rem;
     width: 17rem;
   }
 
@@ -4033,13 +4032,13 @@
     position: relative;
     left: 0rem;
     width: 18rem;
-    bottom: 0rem;
+    bottom: -4rem;
   }
 
   .funny1 p {
     font-size: 17.5px;
     position: relative;
-    bottom: -2rem;
+    bottom: 2rem;
     width: 17rem;
   }
 
@@ -4623,13 +4622,13 @@
     position: relative;
     left: 0rem;
     width: 18rem;
-    bottom: 0rem;
+    bottom: -2rem;
   }
 
   .funny1 p {
     font-size: 17.5px;
     position: relative;
-    bottom: -2rem;
+    bottom: 0rem;
     width: 17rem;
   }
 
@@ -5213,13 +5212,13 @@
     position: relative;
     left: 0rem;
     width: 18rem;
-    bottom: 0rem;
+    bottom: -2rem;
   }
 
   .funny1 p {
     font-size: 17.5px;
     position: relative;
-    bottom: -2rem;
+    bottom: 0rem;
     width: 17rem;
   }
 
